Fix box overflow for Python

--- a/style/style.css
+++ b/style/style.css
@@ -138,7 +138,7 @@ footer {
 }
 
 .ico-box {
-    max-height: 15em;
+    max-height: 19em;
     padding-top: 2em;
     padding-bottom: 2em;
     margin-top: 2em;
